# Tumor-Detection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_implementation.py
configs/: config.yaml
logs/tensorboard/centralized_vit/: events.out.tfevents.1769931279.ZORO-NITRO.20792.0  events.out.tfevents.1769931314.ZORO-NITRO.23352.0
scripts/: evaluate.py  train_centralized.py  train_federated.py
src/data/: data_augmentation.py  data_preprocessing.py  federated_data_loader.py
src/evaluation/: metrics.py
src/federated/: federated_client.py  federated_server.py  federated_trainer.py
src/models/: model_factory.py  swin_transformer.py  vit_model.py
src/utils/: logger.py
